@@ -9,7 +9,7 @@ GDAL_DATA_PATH=$(sed '6q;d' $file_p)
 export LD_LIBRARY_PATH=$GDAL_PATH:$GDAL_DATA_PATH:$GDAL_JAVA_PATH:$LIBGDAL_PATH:$LD_LIBRARY_PATH
 export GDAL_DATA=$GDAL_DATA_PATH
 
-java -Xmx32g -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4 -XX:+UseConcMarkSweepGC -cp ".:$curDir/lib/*:$curDir/target/:$GDAL_JAVA_PATH/*" lasdz $@
+java -Xmx4g -Xmx32g -XX:ParallelGCThreads=8 -XX:ConcGCThreads=8 -cp ".:$curDir/lib/*:$curDir/target/:$GDAL_JAVA_PATH/*" lasdz $@
 
 set +f
 
